--- a/Evaluate_ASL_AI.ipynb
+++ b/Evaluate_ASL_AI.ipynb
@@ -28,7 +28,7 @@
     "\n",
     "\n",
     "def get_prediction(image_data):\n",
-    "    url = 'https://4srz4f0vc4.execute-api.us-east-1.amazonaws.com/Predict/cd452945-4208-47c1-b1a1-75f44fd2fee3'\n",
+    "    url = 'https://4srz4f0vc4.execute-api.us-east-1.amazonaws.com/Predict/cd452945-4208-47c1-b1a1-75f44fd2fee3',
     "    r = requests.post(url, data=image_data)\n",
     "    response_raw = getattr(r,'_content').decode(\"utf-8\")\n",
     "    response = json.loads(response_raw)\n",
