--- a/Evaluate_ASL_AI (1).ipynb
+++ b/Evaluate_ASL_AI (1).ipynb
@@ -29,7 +29,7 @@
     "#Read 100 images of a in American Sign Language \n",
     "# Make predictions and store the prediction and probability\n",
     "def get_prediction(image_data):\n",
-    "    url = 'https://4srz4f0vc4.execute-api.us-east-1.amazonaws.com/Predict/cd452945-4208-47c1-b1a1-75f44fd2fee3'\n",
+    "    url = 'https://4srz4f0vc4.execute-api.us-east-1.amazonaws.com/Predict/f8468db7-d8c8-4fe3-8013-0a7c16c6cd90',
     "    r = requests.post(url, data=image_data)\n",
     "    response_raw = getattr(r,'_content').decode(\"utf-8\")\n",
     "    response = json.loads(response_raw)\n",
